@@ -17,6 +17,7 @@ version <next>:
 - grayworld video filter
 - AV1 Low overhead bitstream format muxer
 - swscale slice threading
+- MSN Siren decoder
 
 
 version 4.4:
